Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/Copilot_Message__e.object-meta.xml
<CustomObject>
    <label>Copilot Message</label>
    <pluralLabel>Copilot Messages</pluralLabel>
</CustomObject>