Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/fields/Attachment_Json__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Json__c</fullName>
    <label>Attachment JSON</label>
    <description>JSON-serialized Direct Line attachments (Adaptive Cards, Hero Cards, etc.).</description>
    <type>LongTextArea</type>
    <length>131072</length>
</CustomField>