Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/fields/Conversation_Id__c.field-meta.xml
<CustomField>
    <fullName>Conversation_Id__c</fullName>
    <label>Conversation Id</label>
    <description>Direct Line conversation ID used to route messages to the correct LWC instance.</description>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
</CustomField>