Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/fields/Is_Final__c.field-meta.xml
<CustomField>
    <fullName>Is_Final__c</fullName>
    <label>Is Final</label>
    <description>When true, indicates this is the last message in the current bot response, so the LWC can stop the typing indicator.</description>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>