Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/fields/Message_Text__c.field-meta.xml
<CustomField>
    <fullName>Message_Text__c</fullName>
    <label>Message Text</label>
    <description>The text content of the bot message.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>