Salesforce Copilot Studio LWC/force-app/main/default/objects/Copilot_Message__e/fields/Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Sender_Id__c</fullName>
    <label>Sender Id</label>
    <description>The Direct Line activity sender ID (bot ID or user ID).</description>
    <type>Text</type>
    <length>255</length>
</CustomField>